# universal-searcher

./: .gitignore  README.md  index.html  package-lock.json  package.json  search.config.sample
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  lib.rs  main.rs  overlay.rs
